--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
                                                                                       width="14" alt=""></a>
               </li>
               <li class="nav-item main-nav__item ">
-                <a class="nav-link main-nav__link active" href="#">Форматы</a>
+                <a class="nav-link main-nav__link active" href="#formats">Форматы</a>
               </li>
               <li class="nav-item main-nav__item">
-                <a class="nav-link main-nav__link" href="#">История</a>
+                <a class="nav-link main-nav__link" href="#history">История</a>
               </li>
               <li class="nav-item main-nav__item">
-                <a class="nav-link main-nav__link" href="#">Суть бизнеса</a>
+                <a class="nav-link main-nav__link" href="#essence">Суть бизнеса</a>
               </li>
               <li class="nav-item main-nav__item">
-                <a class="nav-link main-nav__link" href="#">Что предлагаем</a>
+                <a class="nav-link main-nav__link" href="#sell">Что предлагаем</a>
               </li>
               <li class="nav-item main-nav__item">
-                <a class="nav-link main-nav__link" href="#">Контакты</a>
+                <a class="nav-link main-nav__link" href="#contact-form">Контакты</a>
               </li>
             </ul>
           </div>
@@ -73,7 +73,8 @@
             вам
           </p>
           <button data-toggle="modal" data-target="#join">Запросить смету</button>
-          <div class="experience__phone-wrapper"><span class="phone-number experience__phone">‭8 905 855-05-05</span></div>
+          <div class="experience__phone-wrapper"><span class="phone-number experience__phone">‭8 905 855-05-05</span>
+          </div>
 
         </div>
       </div>
@@ -111,7 +112,7 @@
       Данные обновляются раз в 24 часа из базы 1С — Конфигурации «РУЛЬ»</p>
   </div>
 </div>
-<section class="format">
+<section id="formats" class="format">
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
@@ -179,7 +180,7 @@
     </div>
   </div>
 </section>
-<section class="chains-stores">
+<section id ='history' class="chains-stores">
   <div class="container">
     <div class="row chains-stores__top">
       <div class="col-md-12 col-lg-8">
@@ -251,7 +252,7 @@
     </div>
   </div>
 </div>
-<section class="essence">
+<section id="essence" class="essence">
   <div class="container">
     <div class="row">
       <div class="col-12"><h2 class="bottom-line">Суть бизнеса автозапчастей</h2></div>
@@ -275,7 +276,8 @@
       <div class="col-md-10 col-lg-6 pt-15">
         <div class="essence__video">
           <img src="/img/video2.jpg" alt="видео" width="540">
-          <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="d-none popup-youtube essence__video-lint">Коротко о
+          <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="d-none popup-youtube essence__video-lint">Коротко
+            о
             бизнесе магазина автозапчастей рассказывает
             Игорь Холмецкий</a>
         </div>
@@ -312,7 +314,7 @@
     </div>
   </div>
 </section>
-<section class="sell">
+<section id="sell" class="sell">
   <div class="container">
     <div class="row">
       <div class="col-12 col-lg-3">
@@ -401,8 +403,8 @@
           иномарками одной
           страны, мы мультибрендовый магазин. В наше время, учитывая сложную политическую ситуацию, это является
           неоспоримым преимуществом на данном рынке. </p>
-        <button class="bg-white">Запросить коммерческое предложение</button>
-        <a class="accordion_toggle"><span>Смотреть</span> <i class="arrow-down"></i></a>
+        <button class="bg-white" data-toggle="modal" data-target="#join">Запросить коммерческое предложение</button>
+        <a class="accordion_toggle d-none"><span>Смотреть</span> <i class="arrow-down"></i></a>
       </div>
     </div>
     <!--<div class="row">-->
@@ -477,24 +479,31 @@
           бизнес-счете предпринимателя. Давайте разберемся с основными аспектами нашего будущего сотрудничества:
         </p>
         <h3 class="left-square">Поможем с подбором помещения</h3>
-        <p class="pl-30 pt-20">Со слов Чичваркина, основателя сети «Евросеть», залог успеха ритейла это: Location,
+        <p class="pl-30 pt-20 pl-sm-25">Со слов Чичваркина, основателя сети «Евросеть», залог успеха ритейла это:
+          Location,
           location и … location. </p>
-        <p class="pl-30 pt-10">Мы на собственном опыте знаем, как это важно и как будет тяжело, если совершить ошибку
+        <p class="pl-30 pt-10 pl-sm-25">Мы на собственном опыте знаем, как это важно и как будет тяжело, если совершить
+          ошибку
           на старте, выбрав плохое место.</p>
-        <ul class="pt-20 pl-30">
+        <ul class="pt-20 pl-30 pl-sm-25 pt-sm-15">
           <li>Расскажем как правильно подобрать помещение</li>
           <li>Проведем аудит всех подобранных вами помещений</li>
           <li>Не дадим вам подписать документы на аренду с невыгодными условиями</li>
           <li>Поможем провести переговоды с арендодателем для снижения оплаты</li>
         </ul>
-        <p class="pt-30 pl-30">Кроме этого, после успешных переговоров и подписания документов, мы разработаем
+        <p class="pt-30 pl-30 pl-sm-25 pt-sm-10">Кроме этого, после успешных переговоров и подписания документов, мы
+          разработаем
           планировочное решение торгового зала и склада, дадим рекомендации по ремонту,
           подскажем как не ошибиться в выборе подрядчика. </p>
-        <div class="d-flex flex-wrap flex-md-nowrap pt-30">
-          <div class="col-12 col-md-6 get__image-warehouse"><img src="/img/get1.jpg" alt="фото" width="350"></div>
-          <div class="col-12 col-md-6 mt-3"><img src="/img/get2.jpg" alt="фото" width="290"></div>
+        <div class="d-flex flex-wrap flex-md-nowrap pt-30 pt-sm-15 pl-15">
+          <div class="col-12 col-md-6 get__image-warehouse">
+            <img src="/img/get1.jpg" alt="фото" width="350">
+          </div>
+          <div class="col-12 col-md-6 mt-3 mt-lg-0 pl-sm-0 pr-sm-0 pt-sm-10">
+            <img src="/img/get2.jpg" alt="фото" width="290">
+          </div>
         </div>
-        <p class="subtitle--bold">В итоге, после проведения косметических ремонтных работ, вы получите готовые
+        <p class="pl-30 subtitle--bold">В итоге, после проведения косметических ремонтных работ, вы получите готовые
           торговые и складские площади для начала деятельности ритейлера автозапчастей. </p>
       </div>
       <div class="col-md-4 get-asside">
@@ -506,7 +515,7 @@
           </div>
         </div>
         <img src="/img/bottom-triangle.png" class="get-bottom-triangle" alt="">
-        <p class="pl-sm-15 pr-sm-15 pl-30 pr-30 pb-30 text-center">Если у вас уже есть собственное
+        <p class="pl-sm-15 pr-sm-15 pb-sm-25 pl-30 pr-30 pb-30 text-center">Если у вас уже есть собственное
           помещение или вы в процессе
           подписание документов, отправьте нам заявку и мы составим вам предвариельную смету на ваш будущий
           магазин. </p>
@@ -625,8 +634,8 @@
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
           кладовщиков до руковдителя!
         </p>
-        <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="popup-youtube technologies__screen-link">
-          <img src="/img/technologies/play-button.svg" alt="" class="d-none" width="56">
+        <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="d-none popup-youtube technologies__screen-link">
+          <img src="/img/technologies/play-button.svg" alt="" width="56">
           <p class="technologies__screen-link-description">Посмотреть Демо-ролик <span>45 секунд</span></p>
         </a>
       </div>
@@ -641,8 +650,8 @@
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
           кладовщиков до руковдителя!
         </p>
-        <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="popup-youtube technologies__screen-link">
-          <img src="/img/technologies/play-button.svg" alt="" class="d-none" width="56">
+        <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="d-none popup-youtube technologies__screen-link">
+          <img src="/img/technologies/play-button.svg" alt="" width="56">
           <p class="technologies__screen-link-description">Посмотреть Демо-ролик <span>45 секунд</span></p>
         </a>
       </div>
@@ -657,8 +666,8 @@
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
           кладовщиков до руковдителя!
         </p>
-        <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="popup-youtube technologies__screen-link">
-          <img src="/img/technologies/play-button.svg" alt="" class="d-none" width="56">
+        <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="d-none popup-youtube technologies__screen-link">
+          <img src="/img/technologies/play-button.svg" alt="" width="56">
           <p class="technologies__screen-link-description">Посмотреть Демо-ролик <span>45 секунд</span></p>
         </a>
       </div>
@@ -666,83 +675,74 @@
     <div class="row technologies__bottom">
       <div class="col-md-4 technolodies__bottom-item">
         <h4 class="technologies__bottom-title">
-          Подбор запчастей
+          Отчет по потерянным <br>и спящим клиентам
         </h4>
         <p class="technologies__bottom-description">
-          Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
-          отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
+          Для подогрева интереса и возврата покупателей.
         </p>
       </div>
       <div class="col-md-4 technolodies__bottom-item">
         <h4 class="technologies__bottom-title">
-          Грамотная работа с остатками
+          История взаимодействия <br>с клиентом
         </h4>
         <p class="technologies__bottom-description">
-          Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
-          отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
+          Облегчает работу с клиентами на каждом следующем этапе.
         </p>
       </div>
       <div class="col-md-4 technolodies__bottom-item">
         <h4 class="technologies__bottom-title">
-          Увеличение среднего чека
+          Собственная уникальная <br>база аналогов
         </h4>
         <p class="technologies__bottom-description">
-          Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
-          отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
+          Уникальная постоянно обновляемая база аналогов номенклатуры.
         </p>
       </div>
       <div class="col-md-4 technolodies__bottom-item">
         <h4 class="technologies__bottom-title">
-          Максимализация прибыли
+          Алгоритм подбора запчастей
         </h4>
         <p class="technologies__bottom-description">
-          Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
-          отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
+          Подбор запасных частей в 1С без использования специальных каталогов для колоссальной экономии времени.
         </p>
       </div>
       <div class="col-md-4 technolodies__bottom-item">
         <h4 class="technologies__bottom-title">
-          Лояльность клиентов
+          Анализ ликвидности
         </h4>
         <p class="technologies__bottom-description">
-          Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
-          отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
+          Программа подскажет какой товар залежался на складе.
         </p>
       </div>
       <div class="col-md-4 technolodies__bottom-item">
         <h4 class="technologies__bottom-title">
-          Контроль прироста склада
+          Анализ маржинальности
         </h4>
         <p class="technologies__bottom-description">
-          Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
-          отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
+          Программа подскажет с какого товара вы больше заработаете.
         </p>
       </div>
       <div class="col-md-4 technolodies__bottom-item">
         <h4 class="technologies__bottom-title">
-          Мотивация продавцов
+          Статусы клиентов
         </h4>
         <p class="technologies__bottom-description">
-          Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
-          отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
+          Удобный алгоритм ведения заказов покупателей с подсветкой статусов и смс-информированием клиентов.
         </p>
       </div>
       <div class="col-md-4 technolodies__bottom-item">
         <h4 class="technologies__bottom-title">
-          BIG DATA
+          Отчет по топам продаж
         </h4>
         <p class="technologies__bottom-description">
-          Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
-          отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
+          Позволяет получить максимальную прибыль при минимальных вложениях и увеличить ликвидность склада.
         </p>
       </div>
       <div class="col-md-4 technolodies__bottom-item">
         <h4 class="technologies__bottom-title">
-          Системы аналитики
+          Интегрированная телефония
         </h4>
         <p class="technologies__bottom-description">
-          Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
-          отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
+          Определяет звонящего клиента, существенно экономя время продавцов, минимизирует количество пропущенных и позволяет отслеживать конверсию звонков и сделок.
         </p>
       </div>
     </div>
@@ -978,7 +978,7 @@
 <div class="audience">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 pr-30">
+      <div class="col-md-6 pr-30 order-2 order-md-1">
         <div class="row">
           <div class="col-3 col-md-3">
             <img src="/img/brands/chevrole.png" width="98" alt="картинка марки">
@@ -1006,7 +1006,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5 pl-15">
+      <div class="col-md-5 pl-15 order-1 order-md-2">
         <h3 class="audience__title">А это наша желанная
           целевая аудитория :)</h3>
         <p class="audience__subtitle">Мы работаем с владельцами иномарок и автосервисами.
@@ -1081,7 +1081,7 @@
 <section class="promotion">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 pb-30">
+      <div class="col-md-12 pb-30 pb-sm-15">
         <h2 class="bottom-line">Помогаем с продвижением</h2>
       </div>
       <div class="col-md-4 promotion__item">
@@ -1225,7 +1225,7 @@
   </div>
   <img src="/img/appeal-bottom.png" class="appeal-bottom-bg" alt="bg">
 </div>
-<div class="form">
+<div id="contact-form" class="form">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 offset-0 offset-lg-3">
@@ -1250,7 +1250,7 @@
 
             </div>
           </div>
-          <div class="form-group">
+          <div class="form-group form__city">
             <div class="input-group">
               <input id="promocode" name="city" class="form-control" placeholder="Город для открытия" type="text">
 
