--- a/index.html
+++ b/index.html
@@ -203,32 +203,24 @@
       <div class="col-md-6 col-lg-8">
         <div class="row chains-stores-slider">
           <div class="col-lg-3">
-            <img src="/img/chains-stores-gallery.jpg" alt="фото" width="165">
-            <div class="chains-stores-slider__year">2015</div>
-            <p class="chains-stores-slider__description">Открытие третьего
-              магазина «РУЛЬ» по
-              формату «Макси».</p>
+            <img src="/img/chains-stores/1.jpg" alt="фото" width="165">
+            <div class="chains-stores-slider__year">2008</div>
+            <p class="chains-stores-slider__description">Год открытия первого магазина РУЛЬ</p>
           </div>
           <div class="col-lg-3">
-            <img src="/img/chains-stores-gallery.jpg" alt="фото" width="165">
-            <div class="chains-stores-slider__year">2016</div>
-            <p class="chains-stores-slider__description">Открытие третьего
-              магазина «РУЛЬ» по
-              формату «Макси».</p>
+            <img src="/img/chains-stores/2.jpg" alt="фото" width="165">
+            <div class="chains-stores-slider__year">2014</div>
+            <p class="chains-stores-slider__description">Год открытия второго магазина РУЛЬ</p>
           </div>
           <div class="col-lg-3">
-            <img src="/img/chains-stores-gallery.jpg" alt="фото" width="165">
+            <img src="/img/chains-stores/3.jpg" alt="фото" width="165">
             <div class="chains-stores-slider__year">2017</div>
-            <p class="chains-stores-slider__description">Открытие третьего
-              магазина «РУЛЬ» по
-              формату «Макси».</p>
+            <p class="chains-stores-slider__description">Год открутия третьего магазина РУЛЬ</p>
           </div>
           <div class="col-lg-3">
-            <img src="/img/chains-stores-gallery.jpg" alt="фото" width="165">
+            <img src="/img/chains-stores/4.jpg" alt="фото" width="165">
             <div class="chains-stores-slider__year">2018</div>
-            <p class="chains-stores-slider__description">Открытие третьего
-              магазина «РУЛЬ» по
-              формату «Макси».</p>
+            <p class="chains-stores-slider__description">Запуск федеральной фрашизы РУЛЬ</p>
           </div>
         </div>
       </div>
@@ -856,26 +848,20 @@
 <div class="fluid-gallery">
   <div class="container-fluid">
     <div class="row popup-gallery  slick-slider pb-30">
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/1/1@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/1/1.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/1/2@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/1/2.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/1/3@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/1/3.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/1/4@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/1/4.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
-      </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
-      </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/1/5@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/1/5.jpg" alt="фото">
       </a>
     </div>
   </div>
@@ -883,26 +869,20 @@
 <div class="fluid-gallery">
   <div class="container-fluid">
     <div class="row popup-gallery  slick-slider pb-30">
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/2/1@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/2/1@2x.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/2/2@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/2/2@2x.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/2/3@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/2/3@2x.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/2/4@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/2/4@2x.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
-      </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
-      </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/2/5@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/2/5@2x.jpg" alt="фото">
       </a>
     </div>
   </div>
@@ -1181,7 +1161,7 @@
           <li class="profit__item">Выручка: 4,796 млн руб</li>
           <li class="profit__item">Прибыль <span>(до налога на прибыль):</span> 1,134 млн руб.</li>
         </ul>
-        <a href="#" class="ml-30 plan__link">Отчет о прибылях и убытках</a>
+        <a href="https://docs.google.com/spreadsheets/d/144K5O5cWurWjObTPors0yzWn1QySviG4_FfC0g3iZEY/edit?usp=sharing" target="_blank" class="ml-30 plan__link">Отчет о прибылях и убытках</a>
       </div>
       <div class="col-md-4">
         <h3 class="left-square">РУЛЬ в Липецке,
@@ -1194,7 +1174,7 @@
           <li class="profit__item">Выручка: 2,296 млн руб.</li>
           <li class="profit__item">Прибыль <span>(до налога на прибыль):</span> 0,528 млн руб.</li>
         </ul>
-        <a href="#" class="ml-30 plan__link">Отчет о прибылях и убытках</a>
+        <a href="https://docs.google.com/spreadsheets/d/1mJo5Bo878AIKgWnDSvS-2oYyyAFmKV0Ms-rC5ANvTbk/edit?usp=sharing" target="_blank" class="ml-30 plan__link">Отчет о прибылях и убытках</a>
       </div>
       <div class="col-md-4">
         <h3 class="left-square">РУЛЬ в Липецке,
@@ -1207,7 +1187,7 @@
           <li class="profit__item">Выручка: 4,588 млн руб.</li>
           <li class="profit__item">Прибыль <span>(до налога на прибыль):</span> 1,019 млн руб.</li>
         </ul>
-        <a href="#" class="ml-30 plan__link">Отчет о прибылях и убытках</a>
+        <a href="https://docs.google.com/spreadsheets/d/1LHzyROxScpTJAoDI3zRxzIyl2sFYpSepFfIPF4NCl90/edit?usp=sharing" target="_blank" class="ml-30 plan__link">Отчет о прибылях и убытках</a>
       </div>
     </div>
   </div>
@@ -1280,26 +1260,20 @@
 <div class="fluid-gallery">
   <div class="container-fluid">
     <div class="row popup-gallery  slick-slider pb-30">
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/3/1@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/3/1.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/3/2@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/3/2.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/3/3@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/3/3.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/3/4@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/3/4.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
-      </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
-      </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/3/5@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/3/5.jpg" alt="фото">
       </a>
     </div>
   </div>
@@ -1307,26 +1281,20 @@
 <div class="fluid-gallery">
   <div class="container-fluid">
     <div class="row popup-gallery  slick-slider pb-30">
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/4/1@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/4/1.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/4/2@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/4/2.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/4/3@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/4/3.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/4/4@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/4/4.jpg" alt="фото">
       </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
-      </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
-      </a>
-      <a href="/img/video2@2x.jpg" class="col-md-3">
-        <img src="/img/video2.jpg" alt="фото">
+      <a href="/img/gallery-slick/4/5@2x.jpg" class="col-md-3">
+        <img src="/img/gallery-slick/4/5.jpg" alt="фото">
       </a>
     </div>
   </div>
