--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>РУЛЬ</title>
+  <title>Франшиза магазина автозапчастей</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!--<link href="css/fontawesome.min.css" rel="stylesheet">-->
   <link href="css/slick.css" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header class="page-header">
-  <div class="container">
+  <div class="container">er[
     <div class="page-header__top">
       <div class="page-header__top-wrapper fixed-container">
         <nav class="navbar navbar-expand-lg justify-content-between">
@@ -870,19 +870,19 @@
   <div class="container-fluid">
     <div class="row popup-gallery  slick-slider pb-30">
       <a href="/img/gallery-slick/2/1@2x.jpg" class="col-md-3">
-        <img src="/img/gallery-slick/2/1@2x.jpg" alt="фото">
+        <img src="/img/gallery-slick/2/1.jpg" alt="фото">
       </a>
       <a href="/img/gallery-slick/2/2@2x.jpg" class="col-md-3">
-        <img src="/img/gallery-slick/2/2@2x.jpg" alt="фото">
+        <img src="/img/gallery-slick/2/2.jpg" alt="фото">
       </a>
       <a href="/img/gallery-slick/2/3@2x.jpg" class="col-md-3">
-        <img src="/img/gallery-slick/2/3@2x.jpg" alt="фото">
+        <img src="/img/gallery-slick/2/3.jpg" alt="фото">
       </a>
       <a href="/img/gallery-slick/2/4@2x.jpg" class="col-md-3">
-        <img src="/img/gallery-slick/2/4@2x.jpg" alt="фото">
+        <img src="/img/gallery-slick/2/4.jpg" alt="фото">
       </a>
       <a href="/img/gallery-slick/2/5@2x.jpg" class="col-md-3">
-        <img src="/img/gallery-slick/2/5@2x.jpg" alt="фото">
+        <img src="/img/gallery-slick/2/5.jpg" alt="фото">
       </a>
     </div>
   </div>
