--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header class="page-header">
-  <div class="container">er[
+  <div class="container">
     <div class="page-header__top">
       <div class="page-header__top-wrapper fixed-container">
         <nav class="navbar navbar-expand-lg justify-content-between">
