--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Франшиза магазина автозапчастей</title>
+  <title>Франшиза магазина автозапчастей «РУЛЬ»</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!--<link href="css/fontawesome.min.css" rel="stylesheet">-->
   <link href="css/slick.css" rel="stylesheet">
@@ -29,7 +29,7 @@
                                                                                       width="14" alt=""></a>
               </li>
               <li class="nav-item main-nav__item ">
-                <a class="nav-link main-nav__link active" href="#formats">Форматы</a>
+                <a class="nav-link main-nav__link" href="#formats">Форматы</a>
               </li>
               <li class="nav-item main-nav__item">
                 <a class="nav-link main-nav__link" href="#history">История</a>
@@ -804,9 +804,7 @@
         <h3 class="left-square left-square--personal">После набора «Команды мечты» мы
           пригласим вас вместе на обучение в наш
           тренинговый центр</h3>
-        <p class="pl-30">Понять насколько опытный кандидат пришел на собеседование поможет наш опросный лист, специально
-          подготовленный и отточенный для решения такой задачи. Но, тем не мнее, мы можем провести Skype-собеседование и
-          набрать для вас «Команду мечты» на время старта. </p>
+        <p class="pl-30">Обучение проходит в течении 2-х недель в тренинговом центре, где опытные специалисты расскажут как работать на специализированных программах, как правильно общаться с покупателями, как вести себя в нестандартных ситуациях и многое другое. По окончании тренингов каждый продавец проходит аттестацию и только в случе успешных результатов допускается к продажам в Вашем магазине.</p>
       </div>
       <div class="col-12 col-lg-4 personal-aside">
         <div class="personal-aside__wrapper">
@@ -1070,8 +1068,7 @@
             потребоваться. </p>
           <img src="/img/promotion/b4.jpg" width="350" alt="">
           <h4>Постоянно оптимизируем и улучшаем интерне-трафик</h4>
-          <p>В нашей базе гигантское количество листовок, баннер, макетов для наружной рекламы и всего, что может только
-            потребоваться. </p>
+          <p>Мы вкладываем приличные средства в развитие интернет-рекламы, вы получите доступ к нашим рекламным каналам, проверенных временем.</p>
         </div>
       </div>
       <div class="col-md-4 promotion__item anim anim-v-slide td-1">
@@ -1084,18 +1081,14 @@
             подборе запчастей. </p>
           <img src="/img/promotion/b5.jpg" width="350" alt="">
           <h4>Изготавливаем видео-рекламу</h4>
-          <p>У каждого менеджера стоит монитор, который служит одновременно и мотиватором для дополнительных продаж,
-            личного знакомства с менеджером, в дополнение к бейджику и так же дублирующим экраном при сложностях в
-            подборе запчастей.</p>
+          <p>Видео-контент это дорогой, но эффективный инструмент в продвижении рекламных оферов. У нас есть огромная база готовых роликов и мы постоянно производим новые, доступ к которым, конечно же, будет и у Вас!</p>
         </div>
       </div>
       <div class="col-md-4 promotion__item anim anim-v-slide td-2">
         <div class="d-flex flex-column">
           <img src="/img/promotion/b3.jpg" width="350" alt="">
           <h4>Даём все, что нужно для ведения социальных сетей</h4>
-          <p>У каждого менеджера стоит монитор, который служит одновременно и мотиватором для дополнительных продаж,
-            личного знакомства с менеджером, в дополнение к бейджику и так же дублирующим экраном при сложностях в
-            подборе запчастей..</p>
+          <p>Продвижение в социальных сетях это тренд последних лет, работающий с определенным слоем целевой платежеспособной аудитории, позволяет совершать касания с ЦА по очень низкой стоимости. Мы предоставим для вас сотни фотографий и видео для ведения и расскажем о тонкостях данного вида маркетинга.</p>
         </div>
       </div>
     </div>
@@ -1115,22 +1108,14 @@
           Видео-наблюдение
           в вашем телефоне
         </h3>
-        <p class="font-italic">Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и
-          ошибок в продаже
-          запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
-          кладовщиков до руковдителя! </p>
+        <p class="font-italic">Безопасность и контроль работы магазина это не только интересно, но и достаточно полезно для развития. Контролируйте свой бизнес из любой точки мира, Вам понадобится только доступ в интернет, а запись с камер наблюдения будет храниться на сервере для чрезвычайных случаев.</p>
         <p class="font-italic">
-          Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
-          запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
-          кладовщиков до руковдителя!
+          Мы работаем только с проверенным поставщиками, оборудование, которое мы рекомендуем отказоустойчивое и никогда нас не подводит.
         </p>
       </div>
       <div class="col-md-6 pt-15">
         <h3>Контрлируйте работу из любой точки мира</h3>
-        <p class="font-italic">Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и
-          ошибок в продаже
-          запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
-          кладовщиков до руковдителя! </p>
+        <p class="font-italic">Полноценный доступ к базе со своего мобильного телефона, планшета или ноутбука, из дома, с отдыха — это реальность современного мира, которая позволяет оставаться эффективных в любое время. Все это будет у Вас! </p>
       </div>
       <div class="col-md-5 offset-1">
         <img src="/img/control/control2.jpg" class="mt-30" width="437" alt="фото">
@@ -1206,7 +1191,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 offset-0 offset-lg-3">
-        <form id="contactFormBottom">
+        <form id="contactFormBottom" class="answer-mail">
           <p class="text-center mb-30">Отправьте заявку на получение подробного коммерческого предложения, мы вышлем вам
             смету на открытие магазинов в различных фарматах, с различными объемами инвестиций.</p>
           <div class="form-group">
@@ -1242,10 +1227,6 @@
           </p>
           <button id="submitjoinBottom" class="form-btn" type="submit" disabled="disabled">Отправить заявку</button>
         </form>
-      </div>
-      <div class="col-md-10 offset-1 mt-30 form__description">
-        <p>Отправьте заявку на получение подробного коммерческого предложения, мы вышлем вам смету на открытие магазинов
-          в различных фарматах, с различными объемами инвестиций.</p>
       </div>
     </div>
   </div>
@@ -1302,7 +1283,7 @@
       <div class="col-md-4 page-footer__copyright">© 2008-2018 Сеть магазинов «РУЛЬ»</div>
       <div class="col-md-4 page-footer__privacy"><a href="">Политика конфеденциальности</a></div>
       <div class="col-md-4 page-footer__development">Упаковка франшизы — <a href="http://franch.guru/"
-                                                                           target="_blank">Компания «Бикселс»</a></div>
+                                                                           target="_blank">Franch.Guru</a></div>
     </div>
   </div>
 </footer>
@@ -1315,7 +1296,7 @@
           </button>
         </h3>
       </div>
-      <div class="modal-body  p-2 p-md-5">
+      <div class="modal-body  p-2 p-md-5 answer-mail">
         <p>Введите ваши контактные данные. Специалист по франчайзингу свяжется с вами в течении 15 минут для уточнения
           деталей и подготовки предварительной бизнес-модели дальнейшего масштабирования.
         </p>
@@ -1362,5 +1343,34 @@
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+  (function (d, w, c) {
+    (w[c] = w[c] || []).push(function() {
+      try {
+        w.yaCounter48913442 = new Ya.Metrika({
+          id:48913442,
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true,
+          webvisor:true
+        });
+      } catch(e) { }
+    });
+
+    var n = d.getElementsByTagName("script")[0],
+      s = d.createElement("script"),
+      f = function () { n.parentNode.insertBefore(s, n); };
+    s.type = "text/javascript";
+    s.async = true;
+    s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+    if (w.opera == "[object Opera]") {
+      d.addEventListener("DOMContentLoaded", f, false);
+    } else { f(); }
+  })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/48913442" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </body>
 </html>
