--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="css/magnific-popup.css" rel="stylesheet">
   <link href="css/slick-theme.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
+  <link href="/img/favicon.ico" rel="shortcut icon">
 </head>
 <body>
 <header class="page-header">
