--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="col-6 col-md-3 page-header-bottom__item">
             <div class="">
               Ежемесячное<br>
-              роялти от 2%
+              роялти
             </div>
             <span class="page-header__action">Акция 0%</span>
           </div>
@@ -322,7 +322,7 @@
         <h2 class="bottom-line sell__title">Что мы продаем?</h2>
         <p class="subtitle">
           Мы торгуем автозапчастями для иномарок всех популярных моделей и не ограничиваемся сегментом
-          иномарками одной страны, мы мультибрендовый магазин. В наше время, учитывая сложную политическую ситуацию, это
+          иномарок одной страны, мы мультибрендовый магазин. В наше время, это
           является неоспоримым преимуществом на данном рынке.</p>
         <p class="subtitle pt-0"> Мы работаем только с проверенными и надежными поставщиками, мы уверены за качество
           нашего товара.
